---
source: crates/tapir-script/compiler/src/compile/optimisations/constant_propagation_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/constant_propagation/if_poison.tapir
---
var x = 5; # {"SymbolId(1)"}
var p = 9; # {"SymbolId(2)"}
if true {
    var y = 5; # {"SymbolId(3)"}
    p = 5; # {"SymbolId(2)"}
} else {
    p = 3; # {"SymbolId(2)"}
}
var z = p; # {"SymbolId(4)"}
var w = 5; # {"SymbolId(5)"}
